--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <header>
-      <nav class="flex flex__ji_sb flex__ai_c">
+      <nav class="flex flex__jc_sb flex__ai_c">
         <img src="./images/logo.svg" alt="" />
         <div class="hamburger">
           <span></span>
@@ -35,7 +35,7 @@
           <span></span>
         </div>
 
-        <div class="flex flex__ji_sb navLinks">
+        <div class="flex flex__jc_c flex__ai_c navLinks">
           <li><a href="">Home</a></li>
           <li><a href="">About</a></li>
           <li><a href="">Contact</a></li>
@@ -46,6 +46,24 @@
         <button>Request Invite</button>
       </nav>
     </header>
+
+    <main>
+      <div class="intro" >
+        <div class="intro__display">
+          <img src="/images/image-mockups.png" alt="" class="phones">
+        </div>
+        
+        <div class="intro__splash">
+          <h1>Next generation digital banking</h1>
+          <p>
+            Take your financial life online. Your Easybank account will be a
+            one-stop-shop for spending, saving, budgeting, investing, and much
+            more.
+          </p>
+          <button>Request Invite</button>
+        </div>
+      </div>
+    </main>
 
     <!-- 
   Home
@@ -58,12 +76,9 @@
 
 
 
-  Next generation digital banking
+ 
 
-  Take your financial life online. Your Easybank account will be a one-stop-shop 
-  for spending, saving, budgeting, investing, and much more.
-
-  Request Invite
+  
 
 
 
