--- a/index.html
+++ b/index.html
@@ -46,24 +46,19 @@
         <button>Request Invite</button>
       </nav>
     </header>
-
-    <main>
-      <div class="intro" >
-        <div class="intro__display">
-          <img src="/images/image-mockups.png" alt="" class="phones">
-        </div>
-        
-        <div class="intro__splash">
-          <h1>Next generation digital banking</h1>
-          <p>
-            Take your financial life online. Your Easybank account will be a
-            one-stop-shop for spending, saving, budgeting, investing, and much
-            more.
-          </p>
-          <button>Request Invite</button>
-        </div>
+    <div class="hero">
+      <div class="hero__image"></div>
+      <div class="hero__text">
+        <h1>Next generation digital banking</h1>
+        <p>
+          Take your financial life online. Your Easybank account will be a
+          one-stop-shop for spending, saving, budgeting, investing, and much
+          more.
+        </p>
+        <button>Request Invite</button>
       </div>
-    </main>
+    </div>
+    <p>ufghdsaaugsb;pag</p>
 
     <!-- 
   Home
