--- a/index.html
+++ b/index.html
@@ -58,7 +58,51 @@
         <button>Request Invite</button>
       </div>
     </div>
-    <p>ufghdsaaugsb;pag</p>
+    <div class="bank_detail">
+      <div class="bank_detail__heading">
+
+        <h2>Why choose Easybank?</h2>
+        <p>
+          We leverage Open Banking to turn your bank account into your financial
+          hub. Control your finances like never before.
+        </p>
+      </div>
+
+      <div class="bank_detail__cards">
+        <div class="cards">
+          <img src="./images/icon-online.svg" alt="" />
+          <h3>Online Banking</h3>
+          <p>
+            Our modern web and mobile applications allow you to keep track of
+            your finances wherever you are in the world.
+          </p>
+        </div>
+        <div class="cards">
+          <img src="/images/icon-budgeting.svg" alt="" />
+          <h3>Simple Budgeting</h3>
+          <p>
+            See exactly where your money goes each month. Receive notifications
+            when you’re close to hitting your limits.
+          </p>
+        </div>
+        <div class="cards">
+          <img src="/images/icon-onboarding.svg" alt="" />
+          <h3>Fast Onboarding</h3>
+          <p>
+            We don’t do branches. Open your account in minutes online and start taking control 
+  of your finances right away.
+          </p>
+        </div>
+        <div class="cards">
+          <img src="/images/icon-api.svg" alt="" />
+          <h3>Open API</h3>
+          <p>
+            Manage your savings, investments, pension, and much more from one account. Tracking 
+            your money has never been easier.
+          </p>
+        </div>
+      </div>
+    </div>
 
     <!-- 
   Home
@@ -77,10 +121,9 @@
 
 
 
-  Why choose Easybank?
+ 
 
-  We leverage Open Banking to turn your bank account into your financial hub. Control 
-  your finances like never before.
+  
 
   Online Banking
   Our modern web and mobile applications allow you to keep track of your finances 
