--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
     </div>
     <div class="bank_detail">
       <div class="bank_detail__heading">
-
         <h2>Why choose Easybank?</h2>
         <p>
           We leverage Open Banking to turn your bank account into your financial
@@ -89,94 +88,119 @@
           <img src="/images/icon-onboarding.svg" alt="" />
           <h3>Fast Onboarding</h3>
           <p>
-            We don’t do branches. Open your account in minutes online and start taking control 
-  of your finances right away.
+            We don’t do branches. Open your account in minutes online and start
+            taking control of your finances right away.
           </p>
         </div>
         <div class="cards">
           <img src="/images/icon-api.svg" alt="" />
           <h3>Open API</h3>
           <p>
-            Manage your savings, investments, pension, and much more from one account. Tracking 
-            your money has never been easier.
+            Manage your savings, investments, pension, and much more from one
+            account. Tracking your money has never been easier.
           </p>
         </div>
       </div>
     </div>
+    <div class="articles">
+      <h2 class="articles__title">Latest Articles</h2>
+      <div class="articles__cards">
+        <div class="card">
+          <div class="article_image">
+            <img src="/images/image-currency.jpg" alt="" />
+          </div>
+          <div class="card_text">
+            <span>By Claire Robinson</span>
+            <h3>Receive money in any currency with no fees</h3>
+            <p>
+              The world is getting smaller and we’re becoming more mobile. So
+              why should you be forced to only receive money in a single …
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="article_image">
+            <img src="/images/image-restaurant.jpg" alt="" />
+          </div>
+          <div class="card_text">
+            <span>By Wilson Hutton</span>
+            <h3>Treat yourself without worrying about money</h3>
+            <p>
+              Our simple budgeting feature allows you to separate out your
+              spending and set realistic limits each month. That means you …
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="article_image">
+            <img src="/images/image-plane.jpg" alt="" />
+          </div>
+          <div class="card_text">
+            <span>By Wilson Hutton</span>
+            <h3>Take your Easybank card wherever you go</h3>
+            <p>
+              We want you to enjoy your travels. This is why we don’t charge any
+              fees on purchases while you’re abroad. We’ll even show you …
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="article_image">
+            <img src="/images/image-confetti.jpg" alt="" />
+          </div>
+          <div class="card_text">
+            <span>By Claire Robinson</span>
+            <h3>Our invite-only Beta accounts are now live!</h3>
+            <p>
+              After a lot of hard work by the whole team, we’re excited to
+              launch our closed beta. It’s easy to request an invite through the
+              site ...
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class="footer">
+      <div class="footer__logo">
+        <img src="/images/logoDark.svg" alt="" />
+        <div class="social_icons">
+          <img src="/images/icon-facebook.svg" alt="" /><img
+            src="/images/icon-youtube.svg"
+            alt=""
+          /><img src="/images/icon-twitter.svg" alt="" /><img
+            src="/images/icon-pinterest.svg"
+            alt=""
+          /><img src="/images/icon-instagram.svg" alt="" />
+        </div>
+      </div>
+      <div class="footer__links_col1">
+        <a href="#">About Us</a>
+        <a href="#">Contact</a>
+        <a href="#">Blog</a>
+      </div>
+      <div class="footer__links_col2">
+        <a href="#">Careers</a>
+        <a href="#">Support</a>
+        <a href="#">Privacy Policy</a>
+      </div>
+      <div class="footer__button">
+        <button>Request Invite</button>
+        <span>© Easybank. All Rights Reserved</span>
+      </div>
+    </footer>
 
     <!-- 
-  Home
-  About
-  Contact
-  Blog
-  Careers
+
+  
+  
+  
+  
+  
+  
 
   Request Invite
 
-
-
- 
-
   
-
-
-
- 
-
-  
-
-  Online Banking
-  Our modern web and mobile applications allow you to keep track of your finances 
-  wherever you are in the world.
-
-  Simple Budgeting
-  See exactly where your money goes each month. Receive notifications when you’re 
-  close to hitting your limits.
-
-  Fast Onboarding
-  We don’t do branches. Open your account in minutes online and start taking control 
-  of your finances right away.
-
-  Open API
-  Manage your savings, investments, pension, and much more from one account. Tracking 
-  your money has never been easier.
-
-  
-
-  Latest Articles
-
-  By Claire Robinson
-  Receive money in any currency with no fees
-  The world is getting smaller and we’re becoming more mobile. So why should you be 
-  forced to only receive money in a single …
-
-  By Wilson Hutton
-  Treat yourself without worrying about money
-  Our simple budgeting feature allows you to separate out your spending and set 
-  realistic limits each month. That means you …
-
-  By Wilson Hutton
-  Take your Easybank card wherever you go
-  We want you to enjoy your travels. This is why we don’t charge any fees on purchases 
-  while you’re abroad. We’ll even show you …
-
-  By Claire Robinson
-  Our invite-only Beta accounts are now live!
-  After a lot of hard work by the whole team, we’re excited to launch our closed beta. 
-  It’s easy to request an invite through the site ...
-
-  
-
-  About Us
-  Contact
-  Blog
-  Careers
-  Support
-  Privacy Policy
-
-  Request Invite
-
-  © Easybank. All Rights Reserved
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
