working on hiding mobile menu

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <header>
       <nav class="flex flex__jc_sb flex__ai_c">
         <img src="./images/logo.svg" alt="" />
-        <div class="hamburger">
+        <div class="hamburger" id="burgermenu">
           <span></span>
           <span></span>
           <span></span>
@@ -46,6 +46,15 @@
         <button>Request Invite</button>
       </nav>
     </header>
+    <div class="mobile_menu hidden" id="mobilemenu">
+      <div class="mobile_menu__links">
+        <li><a href="">Home</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Contact</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Careers</a></li>
+      </div>
+    </div>
     <div class="hero">
       <div class="hero__image"></div>
       <div class="hero__text">
@@ -187,6 +196,14 @@
         <button>Request Invite</button>
         <span>© Easybank. All Rights Reserved</span>
       </div>
+
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a href="https://victorjuarez.dev" target="_blank">Victor Juarez</a>.
+      </div>
     </footer>
 
     <!-- 
@@ -207,4 +224,6 @@
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
   </body>
+  <script src="/app/js/script.js" defer></script>
+  r
 </html>
