--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <nav class="flex flex__jc_sb flex__ai_c">
         <img src="./images/logo.svg" alt="" />
         <div class="hamburger" >
-          <img src="/images/icon-hamburger.svg" id="burgermenu" alt="mobile menu button">
+          <img src="./images/icon-hamburger.svg" id="burgermenu" alt="mobile menu button">
         </div>
 
         <div class="flex flex__jc_c flex__ai_c navLinks">
@@ -88,7 +88,7 @@
           </p>
         </div>
         <div class="cards">
-          <img src="/images/icon-budgeting.svg" alt="" />
+          <img src="./images/icon-budgeting.svg" alt="" />
           <h3>Simple Budgeting</h3>
           <p>
             See exactly where your money goes each month. Receive notifications
@@ -96,7 +96,7 @@
           </p>
         </div>
         <div class="cards">
-          <img src="/images/icon-onboarding.svg" alt="" />
+          <img src="./images/icon-onboarding.svg" alt="" />
           <h3>Fast Onboarding</h3>
           <p>
             We don’t do branches. Open your account in minutes online and start
@@ -104,7 +104,7 @@
           </p>
         </div>
         <div class="cards">
-          <img src="/images/icon-api.svg" alt="" />
+          <img src="./images/icon-api.svg" alt="" />
           <h3>Open API</h3>
           <p>
             Manage your savings, investments, pension, and much more from one
@@ -118,7 +118,7 @@
       <div class="articles__cards">
         <div class="card">
           <div class="article_image">
-            <img src="/images/image-currency.jpg" alt="" />
+            <img src="./images/image-currency.jpg" alt="" />
           </div>
           <div class="card_text">
             <span>By Claire Robinson</span>
@@ -131,7 +131,7 @@
         </div>
         <div class="card">
           <div class="article_image">
-            <img src="/images/image-restaurant.jpg" alt="" />
+            <img src="./images/image-restaurant.jpg" alt="" />
           </div>
           <div class="card_text">
             <span>By Wilson Hutton</span>
@@ -144,7 +144,7 @@
         </div>
         <div class="card">
           <div class="article_image">
-            <img src="/images/image-plane.jpg" alt="" />
+            <img src="./images/image-plane.jpg" alt="" />
           </div>
           <div class="card_text">
             <span>By Wilson Hutton</span>
@@ -157,7 +157,7 @@
         </div>
         <div class="card">
           <div class="article_image">
-            <img src="/images/image-confetti.jpg" alt="" />
+            <img src="./images/image-confetti.jpg" alt="" />
           </div>
           <div class="card_text">
             <span>By Claire Robinson</span>
@@ -173,15 +173,15 @@
     </div>
     <footer class="footer">
       <div class="footer__logo">
-        <img src="/images/logoDark.svg" alt="" />
+        <img src="./images/logoDark.svg" alt="" />
         <div class="social_icons">
-          <img src="/images/icon-facebook.svg" alt="" /><img
-            src="/images/icon-youtube.svg"
+          <img src="./images/icon-facebook.svg" alt="" /><img
+            src="./images/icon-youtube.svg"
             alt=""
-          /><img src="/images/icon-twitter.svg" alt="" /><img
-            src="/images/icon-pinterest.svg"
+          /><img src="./images/icon-twitter.svg" alt="" /><img
+            src="./images/icon-pinterest.svg"
             alt=""
-          /><img src="/images/icon-instagram.svg" alt="" />
+          /><img src="./images/icon-instagram.svg" alt="" />
         </div>
       </div>
       <div class="footer__links_col1">
