fixed js load issue

--- a/index.html
+++ b/index.html
@@ -208,5 +208,5 @@
       </div>
     </footer>
   </body>
-  <script src="/app/js/script.js" defer></script>
+  <script src="./app/js/script.js" defer></script>
 </html>
