fixed all the missing CTA actions

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         font-size: 11px;
         text-align: center;
         position: absolute;
-        bottom: .5rem;
+        bottom: 0.5rem;
         left: 50%;
         transform: translateX(-50%) translateY(0);
       }
@@ -33,8 +33,12 @@
     <header>
       <nav class="flex flex__jc_sb flex__ai_c">
         <img src="./images/logo.svg" alt="" />
-        <div class="hamburger" >
-          <img src="./images/icon-hamburger.svg" id="burgermenu" alt="mobile menu button">
+        <div class="hamburger">
+          <img
+            src="./images/icon-hamburger.svg"
+            id="burgermenu"
+            alt="mobile menu button"
+          />
         </div>
 
         <div class="flex flex__jc_c flex__ai_c navLinks">
@@ -175,13 +179,21 @@
       <div class="footer__logo">
         <img src="./images/logoDark.svg" alt="" />
         <div class="social_icons">
-          <img src="./images/icon-facebook.svg" alt="" /><img
-            src="./images/icon-youtube.svg"
-            alt=""
-          /><img src="./images/icon-twitter.svg" alt="" /><img
-            src="./images/icon-pinterest.svg"
-            alt=""
-          /><img src="./images/icon-instagram.svg" alt="" />
+          <object data="./images/icon-facebook.svg" type="image/svg+xml">
+            <img src="./images/icon-facebook.svg" alt="" />
+          </object>
+          <object data="./images/icon-youtube.svg" type="image/svg+xml">
+            <img src="./images/icon-youtube.svg" alt="" />
+          </object>
+          <object data="./images/icon-twitter.svg" type="image/svg+xml">
+            <img src="./images/icon-twitter.svg" alt="" />
+          </object>
+          <object data="./images/icon-pinterest.svg" type="image/svg+xml">
+            <img src="./images/icon-pinterest.svg" alt="" />
+          </object>
+          <object data="./images/icon-instagram.svg" type="image/svg+xml">
+            <img src="./images/icon-instagram.svg" alt="" />
+          </object>
         </div>
       </div>
       <div class="footer__links_col1">
