--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           />
         </div>
 
-        <div class="flex flex__jc_c flex__ai_c navLinks">
+        <div class="flex__jc_c flex__ai_c navLinks">
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
